objects/scormanywhere__ViewTrac_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Mark_PDF_Completion_on_Launch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark PDF Completion on Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Media_Show_Email_Templates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Media Show Email Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Media_Landing_Pages__c</fullName>
        <label>Share Media Landing Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Allowed_Media_Types_For_Upload__c</fullName>
        <label>Allowed Media Types For Upload</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Community_Content_Storage_Region__c</fullName>
        <label>Community Content Storage Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Content_Storage__c</fullName>
        <label>Content Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Default_Content_Thumbnail__c</fullName>
        <label>Default Content Thumbnail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Disable_Playback_Speed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Playback Speed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Azure_Content_Storage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Azure Content Storage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Box_com_Content_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Box.com Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_DropBox_Content_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable DropBox Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_For_All_External_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Default value for Enable For All External Users field in the Media object</inlineHelpText>
        <label>Enable For All External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_For_All_Internal_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Default value for Enable For All Internal Users field in the Media object</inlineHelpText>
        <label>Enable For All Internal Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Google_Drive_Content_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Google Drive Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Local_Device_Content_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Local Device Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_OneDrive_Content_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable OneDrive Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_PDF_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable PDF Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_PDF_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable PDF Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Public_User_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Public User Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Salesforce_Content_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Salesforce Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Screen_Capture_Content_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Screen Capture Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Subtitles_By_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Subtitles By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Web_Link_Content_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Web Link Content Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__External_Service__c</fullName>
        <label>External Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Launch_Interactive_Content_in_New_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Launch Interactive Content in New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Launch_Interactive_Content_in_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Launch Interactive Content in Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Min_PDF_Page_View_Time__c</fullName>
        <label>Min PDF Page View Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Primary_Content_Storage_Region__c</fullName>
        <label>Primary Content Storage Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Send_Media_Allow_Manual_Email_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Media Allow Manual Email Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Send_Media_Site_Id__c</fullName>
        <label>Send Media Site Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Upload_Media_Field_Set_Name__c</fullName>
        <label>Upload Media Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ViewTrac Settings</label>
</CustomObject>